# logtail-dash

./: Cargo.toml  README.md
src/: event.rs
src/custom/: app.rs  opt.rs  ui.rs
