[package]
name = "logtail"
description = "Displays and updates a dashboard based on one or more logfiles"
version = "0.2.7"
authors = ["Mark <git@happybeing.com>"]
license = "GPL-3.0"
homepage = "https://github.com/theWebalyst/logtail-dash"
repository = "https://github.com/theWebalyst/logtail-dash"
readme = "README.md"
exclude = [".github"]
keywords = ["utility", "logfile", "monitor", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion", "crossterm"]

[dependencies]
rand = "0.7.3"
structopt = "~0.3.15"
linemux = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3.5"
termion = { version = "1.5", optional = true }
crossterm = { version = "0.17", optional = true }

[target.'cfg(not(windows))'.dependencies]
tui = { version = "0.10.0", features = ["termion", "crossterm"], default-features = false }

[target.'cfg(windows)'.dependencies]
tui = { version = "0.10.0", features = ["crossterm"], default-features = false }

[[bin]]
name = "logtail"
required-features = ["termion"]
path = "src/bin/logtail-termion.rs"

[[bin]]
name = "logtail-crossterm"
required-features = ["crossterm"]
