[package]
name = "logtail"
description = "Displays and updates a dashboard based on one or more logfiles"
version = "1.0.1"
authors = ["Mark <git@happybeing.com>"]
license = "GPL-3.0"
homepage = "https://github.com/happybeing/logtail-dash"
repository = "https://github.com/happybeing/logtail-dash"
readme = "README.md"
exclude = [".github"]
keywords = ["utility", "logfile", "monitor", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion", "crossterm"]

[dependencies]
tokio = { version = "0.2.22", features = ["sync", "macros"] }
termion = { version = "1.5", optional = true }
crossterm = { version = "0.17", optional = true }
linemux = "0.2.3"
structopt = "~0.3.15"
futures = "0.3.5"
rand = "0.7.3"
tokio-macros = "0.3.1"
tokio-stream = "0.1.8"

[target.'cfg(not(windows))'.dependencies]
tui = { version = "0.11.0", features = ["termion", "crossterm"], default-features = false }

[target.'cfg(windows)'.dependencies]
tui = { version = "0.11.0", features = ["crossterm"], default-features = false }

[[bin]]
name = "logtail"
required-features = ["termion"]
path = "src/bin/logtail-termion.rs"

[[bin]]
name = "logtail-crossterm"
required-features = ["crossterm"]
